--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a1d991c2-6fb6-481b-985e-fe3c5fe6ce10",
    "metadata": {},
    "outputs": [],
@@ -92,6 +92,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c1d8fc17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('Data/stud.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "606e6470-f325-412c-808a-00d84d66bf1e",
    "metadata": {},
@@ -101,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "96287a0e-2688-4f58-a119-7147245fac7f",
    "metadata": {},
    "outputs": [
@@ -277,7 +287,7 @@
        "9                    none          38             60             50  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,23 +306,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "8995c011-c5bd-4dfe-854a-3bc4696c59f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 8)"
+       "Index(['gender', 'race_ethnicity', 'parental_level_of_education', 'lunch',\n",
+       "       'test_preparation_course', 'math_score', 'reading_score',\n",
+       "       'writing_score'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ac1aab51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['gender', 'race_ethnicity', 'parental_level_of_education', 'lunch',\n",
+       "       'test_preparation_course'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select_dtypes(include=\"object\").columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e1e90483",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['math_score', 'reading_score', 'writing_score'], dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select_dtypes(exclude=\"object\").columns"
    ]
   }
  ],
